<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.RelativeLayout"
    tools:background="@color/offset_background">

    <LinearLayout
        android:id="@+id/bottom_navigation_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@id/item_wrapper">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="?barColor" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/cutout_background"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:src="@drawable/bottom_navigation_inset"
                android:layout_gravity="top"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?barColor" />
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="?barColor" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small">
        <com.habitrpg.android.habitica.ui.views.navigation.BottomNavigationItem
            android:id="@+id/tab_habits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:title="@string/habits"
            app:iconDrawable="@drawable/icon_habits_selected"/>
        <com.habitrpg.android.habitica.ui.views.navigation.BottomNavigationItem
            android:layout_width="0dp"
            android:id="@+id/tab_dailies"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:title="@string/dailies"
            app:iconDrawable="@drawable/icon_dailies_selected"/>
        <androidx.legacy.widget.Space
            android:layout_width="50dp"
            android:layout_height="wrap_content" />
        <com.habitrpg.android.habitica.ui.views.navigation.BottomNavigationItem
            android:id="@+id/tab_todos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:title="@string/todos"
            app:iconDrawable="@drawable/icon_todos_selected"/>
        <com.habitrpg.android.habitica.ui.views.navigation.BottomNavigationItem
            android:id="@+id/tab_rewards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:title="@string/rewards"
            app:iconDrawable="@drawable/icon_rewards_selected"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/add_wrapper"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/bottom_navigation_background"
        android:layout_marginTop="-39dp"
        android:background="@drawable/fab_background">
        <ImageButton
            android:id="@+id/add"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/fab_plus"
            android:background="@color/transparent"
            android:contentDescription="@string/new_task" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/submenu_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_wrapper"
        android:orientation="vertical"
        android:gravity="center_horizontal"/>
</merge>